Modified Home setting and Collection View

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -292,12 +292,12 @@
     "input_border_radius": 0,
     "promobox_image_border_radius": 0,
     "promobox_format_pjpg": true,
-    "promocode_display_enable": true,
-    "promocode_display_collection": "thanksgiving20",
+    "promocode_display_enable": false,
+    "promocode_display_collection": "promotion",
     "promocode_display_text": "You get 20% off with \"THANKSGIVING20\" code.",
-    "sourcing_cbt_supplier": "mxnitaly",
-    "sourcing_cbt_sourcing_type": "39",
-    "sourcing_cbt_storage": "3",
+    "sourcing_cbt_supplier": "5fbd88124bdc6265cd5527c2",
+    "sourcing_cbt_sourcing_type": "20",
+    "sourcing_cbt_storage": "1",
     "sourcing_cbt_title": "SHIPPING FROM ITALY",
     "sourcing_cbt_text": "This product will be directly shipped from Italy. It may take an average 7 days or more to receive the item. The international shipping cost will be charged.",
     "notification_cookies_enable": false,
@@ -327,9 +327,9 @@
     "dev_enable_custom_css": false,
     "dev_enable_custom_js": false,
     "checkout_header_image": "",
-    "checkout_logo_image": "",
+    "checkout_logo_image": "shopify:\/\/shop_images\/blancsom-logo_2ddb7735-b27f-4001-aed9-dd0fe8ee7438.png",
     "checkout_logo_position": "left",
-    "checkout_logo_size": "medium",
+    "checkout_logo_size": "small",
     "checkout_body_background_image": "",
     "checkout_body_background_color": "#fff",
     "checkout_input_background_color_mode": "white",
@@ -1444,8 +1444,8 @@
           "enable_view_length_12": true,
           "enable_view_length_18": true,
           "enable_view_length_24": true,
-          "enable_view_length_48": false,
-          "default_view_length": "12",
+          "enable_view_length_48": true,
+          "default_view_length": "24",
           "view_grid_visibility": "desktop_n_mobile",
           "show_view_grid": false,
           "show_view_grid_1": true,
