Display 6cols on extra-wide screen(added)

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -295,11 +295,14 @@
     "promocode_display_enable": false,
     "promocode_display_collection": "promotion",
     "promocode_display_text": "You get 20% off with \"THANKSGIVING20\" code.",
-    "sourcing_cbt_supplier": "5fbd88124bdc6265cd5527c2",
-    "sourcing_cbt_sourcing_type": "20",
+    "sourcing_cbt_supplier": "6033bdfb2211d261162ebc24",
+    "sourcing_cbt_sourcing_type": "16",
     "sourcing_cbt_storage": "1",
     "sourcing_cbt_title": "SHIPPING FROM ITALY",
     "sourcing_cbt_text": "This product will be directly shipped from Italy. It may take an average 7 days or more to receive the item. The international shipping cost will be charged.",
+    "sourcing_brand_supplier": "5fec8e8ba1f25674fb0aeae4",
+    "sourcing_brand_sourcing_type": "20",
+    "sourcing_brand_storage": "1",
     "notification_cookies_enable": false,
     "notification_cookies_button_information_link": "",
     "notification_cookies_delay": 0,
@@ -1445,7 +1448,7 @@
           "enable_view_length_18": true,
           "enable_view_length_24": true,
           "enable_view_length_48": true,
-          "default_view_length": "24",
+          "default_view_length": "36",
           "view_grid_visibility": "desktop_n_mobile",
           "show_view_grid": false,
           "show_view_grid_1": true,
