Add Multi Sourcing Check to 'From Manufacturer'

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -303,6 +303,10 @@
     "sourcing_brand_supplier": "5fec8e8ba1f25674fb0aeae4",
     "sourcing_brand_sourcing_type": "20",
     "sourcing_brand_storage": "1",
+    "use_sourcing_check_add1": true,
+    "sourcing_brand_supplier_add1": "6033bdb06b29294cf50bbcd4",
+    "sourcing_brand_sourcing_type_add1": "20",
+    "sourcing_brand_storage_add1": "4",
     "notification_cookies_enable": false,
     "notification_cookies_button_information_link": "",
     "notification_cookies_delay": 0,
