Fixed Designers Link Error

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -740,14 +740,15 @@
           "1586279874234": {
             "type": "promobox",
             "settings": {
-              "url": "https:\/\/blancsom.com\/collections\/vendors?q=Marni",
+              "url": "https:\/\/blancsom.com\/collections\/vendors?q=MAISON%20KITSUNE",
+              "image": "shopify:\/\/shop_images\/0416_Marni_833x833_cced9e03-125e-421a-ae34-5783bf1b0bad.jpg",
               "image_size": 1450,
               "image_mobile_size": 550,
               "image_position_x": 50,
               "color_image_mask": "",
               "image_mask_opacity": 0.5,
-              "text_line_1": "MARNI",
-              "text_line_2": "Marni is recognized all over the world for its luxury ready-to-wear and accessories collections Made in Italy.",
+              "text_line_1": "MAISON KITSUNE",
+              "text_line_2": "The Maison Kitsuné man and woman resonate with this perfect balance between comfort and simplicity, laid-back cool and au courant sophistication.",
               "text_line_3": "New In",
               "style": "1",
               "button_1": "",
@@ -766,7 +767,7 @@
               "add_container": false,
               "content_width": 100,
               "text_width": 0,
-              "height": "auto",
+              "height": "80",
               "min_height": 0,
               "size_of_column": "auto",
               "visible": "desktop_mobile",
@@ -781,13 +782,15 @@
           "30e4ef7d-1d65-4277-b781-8763c76e1216": {
             "type": "promobox",
             "settings": {
+              "url": "https:\/\/blancsom.com\/collections\/vendors?q=Paloma%20Wool",
+              "image": "shopify:\/\/shop_images\/175873194_543303623320164_1465804442532726734_n.jpg",
               "image_size": 1450,
               "image_mobile_size": 550,
               "image_position_x": 50,
               "color_image_mask": "",
               "image_mask_opacity": 0.5,
-              "text_line_1": "Golden Goose",
-              "text_line_2": "Unique details, exclusive treatments and top quality materials. A dream that head off from Venice and went far as the skate parks of Los Angeles.",
+              "text_line_1": "PALOMA WOOL",
+              "text_line_2": "In its entirety and in its essence, a work of art. Clothes run in perfect parallel with the photography projects and the vibe of simple.",
               "text_line_3": "New In",
               "style": "1",
               "button_1": "",
@@ -806,7 +809,7 @@
               "add_container": false,
               "content_width": 100,
               "text_width": 0,
-              "height": "100",
+              "height": "80",
               "min_height": 0,
               "size_of_column": "auto",
               "visible": "desktop_mobile",
@@ -1007,15 +1010,16 @@
           "1586282889393": {
             "type": "promobox",
             "settings": {
-              "url": "https:\/\/blancsom.com\/collections\/vendors?q=Fornasetti",
+              "url": "https:\/\/blancsom.com\/collections\/vendors?q=STANLEY",
+              "image": "shopify:\/\/shop_images\/178919970_4308127942587276_8788768368506352445_n.jpg",
               "image_size": 1450,
               "image_mobile_size": 550,
               "image_position_x": 50,
               "color_image_mask": "",
               "image_mask_opacity": 0.5,
-              "text_line_1": "Art of Living",
-              "text_line_2": "Fornasetti object is not simply something to possess, it is something to live and be inspired by.",
-              "text_line_3": "Fornasetti",
+              "text_line_1": "Built for Life",
+              "text_line_2": "Level up your outdoor-friendly lifestyle and adventure with Stanley",
+              "text_line_3": "Stanley",
               "style": "1",
               "button_1": "",
               "color_button_type_1": "default",
@@ -1994,13 +1998,14 @@
           "f23ad098-033d-4a48-a120-9f7fcf300fb3": {
             "type": "promobox",
             "settings": {
-              "url": "https:\/\/blancsom.com\/collections\/vendors?q=MM6%20MAISON%20MARGIELA",
+              "url": "https:\/\/blancsom.com\/collections\/new\/products\/m_superstar-laminated-gmf00101-f000312-60246",
+              "image": "shopify:\/\/shop_images\/lp3nOXNA.jpg",
               "image_size": 1450,
               "image_mobile_size": 550,
               "image_position_x": 50,
               "color_image_mask": "",
               "image_mask_opacity": 0.5,
-              "text_line_1": "MM6 Maison Margiela",
+              "text_line_1": "GOLDEN GOOSE DELUXE BRAND",
               "text_line_2": "",
               "text_line_3": "Featured",
               "style": "1",
@@ -2035,13 +2040,14 @@
           "1c94b8d7-a5f4-44ec-ac36-ad16ad6094b7": {
             "type": "promobox",
             "settings": {
-              "url": "https:\/\/blancsom.com\/collections\/vendors?q=Helinox",
+              "url": "https:\/\/blancsom.com\/products\/acton-ii-bluetooth-speaker_black",
+              "image": "shopify:\/\/shop_images\/20210430_143346.jpg",
               "image_size": 1450,
               "image_mobile_size": 550,
               "image_position_x": 50,
               "color_image_mask": "",
               "image_mask_opacity": 0.5,
-              "text_line_1": "Helinox",
+              "text_line_1": "MARSHALL",
               "text_line_2": "",
               "text_line_3": "Featured",
               "style": "1",
@@ -2148,13 +2154,14 @@
           "394c95ad-12c7-4a16-8f53-13563ed3cf15": {
             "type": "promobox",
             "settings": {
-              "url": "https:\/\/blancsom.com\/collections\/vendors?q=A.P.C.",
+              "url": "https:\/\/blancsom.com\/collections\/womens-clothing\/products\/upper-east-side-sweatpants-white-navy",
+              "image": "shopify:\/\/shop_images\/180588660_581076579460265_2740740255705939598_n.jpg",
               "image_size": 1450,
               "image_mobile_size": 550,
               "image_position_x": 50,
               "color_image_mask": "",
               "image_mask_opacity": 0.5,
-              "text_line_1": "A.P.C.",
+              "text_line_1": "SPORTY & RICH",
               "text_line_2": "",
               "text_line_3": "Featured",
               "style": "1",
