--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -356,9 +356,9 @@
     "product_info_quick_show_full_details": true,
     "product_info_payments_type": "dark",
     "wishlist_enable": false,
-    "compare_enable": true,
+    "compare_enable": false,
     "payment_footer_sequence": "1,2,3,4,5,6,7,8,9",
-    "payment_product_sequence": "10,11,12,1,2,3,4,5,6,7,8,9",
+    "payment_product_sequence": "10,11,12,4,5,6",
     "payment_icon_1_show": true,
     "payment_icon_1_code": "",
     "payment_icon_1_image": "",
